# vs-deoldify

./: LICENSE  README.md  pyproject.toml
vsdeoldify/: __init__.py  havc_utils.py
vsdeoldify/colorization/: __init__.py
vsdeoldify/colorization/colorizers/: base_color.py  eccv16.py  siggraph17.py  util.py
vsdeoldify/colormnet/: __init__.py  colormnet_client.py  colormnet_render.py  colormnet_server.py  colormnet_utils.py
vsdeoldify/colormnet/dataset/: range_transform.py
vsdeoldify/colormnet/inference/: memory_manager.py
vsdeoldify/colormnet/model/: modules.py  resnet.py
vsdeoldify/colormnet2/: __init__.py  colormnet2_client.py  colormnet2_render.py  colormnet2_server.py  colormnet2_utils.py
vsdeoldify/colormnet2/dataset/: static_dataset.py  tps.py  vos_dataset.py
vsdeoldify/colormnet2/inference/: inference_core.py  kv_memory_store.py
vsdeoldify/colormnet2/model/: attention.py  network.py  trainer.py
vsdeoldify/colormnet2/util/: image_saver.py  transforms.py
vsdeoldify/deepex/: __init__.py
vsdeoldify/deepex/lib/: FeatVGG.py  TestTransforms.py  VGGFeatureLoss.py  videoloader.py  (+1 more)
vsdeoldify/deoldify/: __init__.py  adjust.py  dataset.py  filters.py  generators.py  layers.py  unet.py  visualize.py
vsdeoldify/fastai/: basic_train.py  basics.py
vsdeoldify/remaster/: __init__.py  remaster_render.py  remaster_utils.py
vsdeoldify/vsslib/: __int__.py  constants.py  imfilters.py  mcomb.py  nputils.py  restcolor.py  vsfilters.py  vsmodels.py  vsplugins.py  vsresize.py  vsretinex.py  vsscdect.py  vsscdetect_edge.py  vstiles4.py  vsutils.py
(+14 files in other folders)
